<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_block"
        android:gravity="center"
        android:padding="5dp"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_flag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:textColor="@color/red"
            android:textSize="18sp"
            tools:text="hello" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:src="@drawable/ic_settings"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image_smile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:src="@drawable/happy"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="00:00"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </LinearLayout>

    <GridView
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hapticFeedbackEnabled="true"
        android:horizontalSpacing="2dp"
        android:numColumns="9"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

    <TextView
        android:id="@+id/text_won_lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="@dimen/textsize_word"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid" />

    <TextView
        android:id="@+id/text_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_won_lost" />

</androidx.constraintlayout.widget.ConstraintLayout>
