<resources>
    <string name="app_name">Minesweeper</string>
    <string name="title_about">Minesweeper %1$s © %2$d by Mihir Joshi (B00773778)</string>
    <string name="text_best">New personal best in %1$s level : %2$s seconds</string>
    <string name="text_won">"You have won!!!"</string>
    <string name="text_lost">"You lost the game"</string>

    <string name="pref_title_display">General</string>
    <string name="pref_description_sound">Toggle game music</string>
    <string name="pref_title_sound">Music</string>
    <string name="pref_description_vibrate">Toggle touch vibrations </string>
    <string name="pref_title_vibrate">Vibration</string>
    <string name="pref_title_difficulty">Difficulty</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_open_source">Open source licenses</string>
    <string name="pref_summary_open_source">License for open source used</string>
    <string name="pref_title_disclaimer">Disclaimer</string>
    <string name="pref_title_difficult">Difficulty</string>

    <string name="show_grid">Play by uncovering the mines</string>
    <string name="show_flag">Flag Count</string>
    <string name="show_flag_description">Number of flags to place over the mines</string>
    <string name="show_settings">Settings</string>
    <string name="show_settings_description">Change user preferences</string>
    <string name="show_smile">Click to start a new game</string>
    <string name="show_time">Timer</string>
    <string name="show_time_description">Solve as fast as you can to make a high score</string>

    <string-array name="pref_difficulty_list_titles">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advance</item>
    </string-array>
    <string-array name="pref_difficulty_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
